--- a/src/components/AuthComponent/inputphone.module.scss
+++ b/src/components/AuthComponent/inputphone.module.scss
@@ -24,7 +24,7 @@
         transition: border-color 0.3s ease;
 
         &:focus {
-            border-color: #e74c3c;
+            border-color: #3498db;
         }
     }
 
