--- a/src/components/AuthComponent/inputnewuser.module.scss
+++ b/src/components/AuthComponent/inputnewuser.module.scss
@@ -1,9 +1,66 @@
+// .input-new-user-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     justify-content: center;
+//     height: 50vh;
+
+//     label {
+//         margin-bottom: 8px;
+//         font-size: 18px;
+//         color: #333;
+//     }
+
+//     input,
+//     select {
+//         padding: 10px;
+//         margin-bottom: 12px;
+//         border: 2px solid #D9EDF7;
+//         border-radius: 4px;
+//         font-size: 16px;
+//         width: 80%; // Width adjusted for better aesthetics
+//         outline: none;
+//         transition: border-color 0.3s ease;
+
+//         &:focus {
+//             border-color: #3c9ae7;
+//         }
+//     }
+
+//     .dob-input {
+//         width: 80%;
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+
+//         .dob-dropdowns {
+//             display: flex;
+//             justify-content: space-between;
+//             width: 100%;
+//         }
+//     }
+
+//     button {
+//         padding: 12px 24px;
+//         cursor: pointer;
+//         background-color: #3498db;
+//         color: #fff;
+//         border: none;
+//         border-radius: 4px;
+//         font-size: 18px;
+//         transition: background-color 0.3s ease;
+
+//         &:hover {
+//             background-color: #2980b9;
+//         }
+//     }
+// }
 .input-new-user-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 60vh;
 
     label {
         margin-bottom: 8px;
@@ -18,7 +75,7 @@
         border: 2px solid #D9EDF7;
         border-radius: 4px;
         font-size: 16px;
-        width: 80%; // Width adjusted for better aesthetics
+        width: 80%;
         outline: none;
         transition: border-color 0.3s ease;
 
@@ -40,7 +97,30 @@
         }
     }
 
+    .gender-email-container {
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+
+        .gender-input,
+        .email-input {
+            width: 48%;
+            label {
+                display: block;
+                margin-bottom: 8px;
+                font-size: 18px;
+                color: #333;
+            }
+
+            input,
+            select {
+                width: 100%;
+            }
+        }
+    }
+
     button {
+        margin-top: 3%;
         padding: 12px 24px;
         cursor: pointer;
         background-color: #3498db;
