--- a/src/app/dathen/dathen.css
+++ b/src/app/dathen/dathen.css
@@ -1,9 +1,9 @@
 /* bookingPage.css */
-.container {
+/* .container {
     display: flex;
     justify-content: center;
     
-}
+} */
 
 .booking-page {
     display: flex;
