--- a/src/components/KeHoachDieuTri/style.css
+++ b/src/components/KeHoachDieuTri/style.css
@@ -30,12 +30,13 @@
     background-color: #f0f8ff;
     /* Màu xanh dương cho trạng thái kế hoạch */
 }
+
 .khdt-card.khdt-planned {
     /* background-color: #7fff00; */
     border: 2px solid #025baf;
     color: #025baf
-
 }
+
 .khdt-card.khdt-completed {
     border: 2px solid #59af02;
     color: #59af02
@@ -82,7 +83,60 @@
     color: #ff4500;
     /* Màu cam cho răng chẵn */
 }
+
 .tooth-list li {
     /* width: 100%; */
     padding-left: 5%;
+}
+
+.search-container {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: flex-end;
+    height: 50px;
+}
+
+.search-container input {
+    height: 90%;
+    /* padding:0.5px; */
+    margin-top: 14%;
+    margin-right: 9.1%;
+    outline: none;
+    width: 10%;
+    border: none;
+    border-right: 1px solid #dadada;
+    border-bottom: 1px solid #dadada;
+}
+
+/* #search {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-left: 10px;
+    flex: 1;
+    /* Expand to fill available space */
+/*} 
+
+
+.search-label {
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+/* Thêm hiệu ứng hover cho nút tìm kiếm */
+#search-btn {
+    padding: 8px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#search-btn:hover {
+    background-color: #0056b3;
 }
