--- a/src/app/nhanvien/appointments/appointment.css
+++ b/src/app/nhanvien/appointments/appointment.css
@@ -71,11 +71,12 @@ button {
 button:hover {
     background-color: #0056b3;
 }
-.filter-section {
+div.filter-section {
     margin: 20px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    
     /* Để căn giữa theo chiều ngang */
 }
 
@@ -97,6 +98,7 @@ button:hover {
 .filter-section button {
     cursor: pointer;
     background-color: #007bff;
+    
     color: #fff;
     border: none;
     border-radius: 3px;
