--- a/src/app/nhanvien/dentists/dentist.css
+++ b/src/app/nhanvien/dentists/dentist.css
@@ -1,11 +1,70 @@
+/* patients.css */
 .title-wrap {
     font-size: 22px;
-    height: 100%;
+    height: 60px;
     width: 100%;
-    border: 1px solid #E0E0E0;
-    /* padding-bottom: 2vh; */
+    border: 1px solid #e0e0e0;
+    display: flex;
+    align-items: center;
+    /* background-color: #f5f5f5; */
 }
 
 .title-wrap .page-title {
     padding-left: 2em;
+}
+
+.input-patient {
+    display: flex;
+    justify-content: center;
+    margin: 24px;
+}
+
+.patient-wrap {
+    margin: 24px;
+}
+
+.patient-wrap .wrap-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 3%;
+
+    margin-top: 3%;
+}
+
+.patient-card {
+    width: 90%;
+    border: 1px solid #ddd;
+    padding: 15px;
+    height: 30px;
+    border-radius: 8px;
+    transition: box-shadow 0.3s;
+    margin: 0 auto;
+    margin-bottom: 18px;
+    text-align: center;
+}
+
+.patient-card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.patient-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.patient-info p {
+    margin: 0;
+}
+
+.patient-info h2 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+a {
+    color: inherit;
+    /* blue colors for links too */
+    text-decoration: inherit;
 }
