--- a/src/app/dashboard/dentists/detail/[id]/style.css
+++ b/src/app/dashboard/dentists/detail/[id]/style.css
@@ -102,3 +102,11 @@
     justify-content: center;
 
 }
+.lich-bacsi {
+    margin-left: 5%;
+    margin-top: 5%;
+    width: 100%;
+    border: 1px solid #dadada;
+    padding: 3%;
+    margin-bottom: 5%;
+}
